Fix issue with divider descendors being cut off  #3585

--- a/src/definitions/elements/divider.less
+++ b/src/definitions/elements/divider.less
@@ -67,7 +67,6 @@
 
   height: auto;
   margin: @horizontalMargin;
-  overflow: hidden;
   line-height: 1;
   text-align: center;
 }
